--- a/static/templates/layout/header.html
+++ b/static/templates/layout/header.html
@@ -4,6 +4,11 @@
         width: 100%;
         height: auto;
         padding: 20px;
+        color: white;
+    }
+    
+    .header .logo {
+        width: 10%;
     }
     
     .logo img {
@@ -12,21 +17,38 @@
     }
     
     .header .search_box {
-        width: 60%;
+        width: 50%;
+    }
+    
+    .search_box input {
+        width: 100%;
+    }
+    
+    .cart img {
+        max-width: 100px;
+        max-height: 100px;
+    }
+    
+    .header .signin {
+        width: 10%;
+    }
+    
+    .header .cart {
+        width: 10%;
     }
 </style>
 <div class="header">
     <div class="logo">
-        <img src="/gameWebApp/static/images/logo.png">
+        <img src="static/images/logo.png">
     </div>
     <div class="search_box">
         <input type="text" ng-model="search_query">
         </input>
     </div>
     <div class="signin">
+        <h4>Sign IN</h4>
     </div>
     <div class="cart">
+        <img src="static/images/cart.png">
     </div>
-
-</div>
 </div>
