--- a/static/templates/layout/header.html
+++ b/static/templates/layout/header.html
@@ -1,54 +1,52 @@
 <style>
+    .inline-block {
+        display: inline-block;
+    }
+    
+    .flex {
+        display: flex;
+    }
+    
     .header {
         background-color: #2874F0;
         width: 100%;
         height: auto;
         padding: 20px;
-        color: white;
+        /*color: white;*/
     }
     
-    .header .logo {
-        width: 10%;
+    .hfix {
+        height: 40px;
     }
     
-    .logo img {
-        max-width: 100px;
-        max-height: 100px;
+    .hfull {
+        height: 100%;
     }
+    /*.row {
+        width: 100%
+    }*/
     
-    .header .search_box {
-        width: 50%;
-    }
-    
-    .search_box input {
-        width: 100%;
-    }
-    
-    .cart img {
-        max-width: 100px;
-        max-height: 100px;
-    }
-    
-    .header .signin {
-        width: 10%;
-    }
-    
-    .header .cart {
-        width: 10%;
+    .search_box {
+        width: calc(100% - 100px);
+        padding-left: 10px;
+        padding-right: 10px;
     }
 </style>
-<div class="header">
-    <div class="logo">
-        <img src="static/images/logo.png">
+<div class="header flex">
+    <div class="logo hfix">
+        <img class="hfull" src="static/images/logo.png">
     </div>
-    <div class="search_box">
-        <input type="text" ng-model="search_query">
-        </input>
+    <div class="search_box flex hfix">
+        <div class="hfull">
+            <input class="hfull" type="text" ng-model="search_query" placeholder="Search..">
+            </input>
+        </div>
+        <div class="hfull">
+            <button class="hfull" type="submit"><span><i class="material-icons">search</i></span>
+            </button>
+        </div>
     </div>
-    <div class="signin">
-        <h4>Sign IN</h4>
-    </div>
-    <div class="cart">
-        <img src="static/images/cart.png">
+    <div class="cart hfix">
+        <img class="hfull" src="static/images/cart.png">
     </div>
 </div>
