header search bar size resolved

--- a/static/templates/layout/header.html
+++ b/static/templates/layout/header.html
@@ -37,12 +37,12 @@
         <img class="hfull" src="static/images/logo.png">
     </div>
     <div class="search_box flex hfix">
-        <div class="hfull">
-            <input class="hfull" type="text" ng-model="search_query" placeholder="Search..">
+        <div class="hfull" style="width:90%;">
+            <input class="hfull" style="width:100%;" type="text" ng-model="search_query" placeholder="Search..">
             </input>
         </div>
-        <div class="hfull">
-            <button class="hfull" type="submit"><span><i class="material-icons">search</i></span>
+        <div class="hfull" style="width:10%;">
+            <button class="hfull" style="width:100%;" type="submit"><span><i class="material-icons">search</i></span>
             </button>
         </div>
     </div>
