--- a/static/templates/home.html
+++ b/static/templates/home.html
@@ -1,5 +1,6 @@
 <div ng-controller="mainCtrl">
-  <header ng-include="header"></header>
+<header></header>
+
   <h2> main heading {{message}}</h2>
   <input ng-model="msg">{{msg}}
 </div>
