--- a/static/templates/layout/header.html
+++ b/static/templates/layout/header.html
@@ -13,6 +13,8 @@
         </div>
     </div>
     <div class="cart hfix">
-        <img class="hfull" src="static/images/cart.png">
+      <!-- <button type="button" class="btn btn-default"> -->
+    <img src="static/images/icons/ic_shopping_cart_black_24px.svg"></img> Cart
+  <!-- </button> -->
     </div>
 </div>
