header update cart change and menu included

--- a/static/templates/layout/header.html
+++ b/static/templates/layout/header.html
@@ -31,6 +31,11 @@
         padding-left: 10px;
         padding-right: 10px;
     }
+
+    .menu{
+
+    }
+
 </style>
 <div class="header flex">
     <div class="logo hfix">
@@ -38,7 +43,7 @@
     </div>
     <div class="search_box flex hfix">
         <div class="hfull" style="width:90%;">
-            <input class="hfull" style="width:100%;" type="text" ng-model="search_query" placeholder="Search..">
+            <input class="hfull" style="width:100%;" type="text" ng-model="search_query" placeholder="Search..">    
             </input>
         </div>
         <div class="hfull" style="width:10%;">
@@ -46,7 +51,10 @@
             </button>
         </div>
     </div>
-    <div class="cart hfix">
-        <img class="hfull" src="static/images/cart.png">
+    <div class="cart hfix"> 
+        <img class="hfull" src="static/images/ic_shopping_cart_white_24px.svg">
+    </div>
+    <div class = "menu" >
+        <img class = "hfix" src = "static/images/ic_more_vert_white_24px.svg" >
     </div>
 </div>
