--- a/static/css/header.css
+++ b/static/css/header.css
@@ -11,7 +11,7 @@
     width: 100%;
     height: auto;
     padding: 20px;
-    /*color: white;*/
+box-shadow: 0px 2px 10px #888888;
 }
 
 .hfix {
@@ -29,4 +29,9 @@
     width: calc(100% - 100px);
     padding-left: 10px;
     padding-right: 10px;
+}
+
+.container-fluid {
+    background-color: #2874F0;
+    max-height: 90px;
 }
