--- a/static/templates/layout/header.html
+++ b/static/templates/layout/header.html
@@ -1,60 +1,35 @@
-<style>
-    .inline-block {
-        display: inline-block;
-    }
-    
-    .flex {
-        display: flex;
-    }
-    
-    .header {
-        background-color: #2874F0;
-        width: 100%;
-        height: auto;
-        padding: 20px;
-        /*color: white;*/
-    }
-    
-    .hfix {
-        height: 40px;
-    }
-    
-    .hfull {
-        height: 100%;
-    }
-    /*.row {
-        width: 100%
-    }*/
-    
-    .search_box {
-        width: calc(100% - 100px);
-        padding-left: 10px;
-        padding-right: 10px;
-    }
-
-    .menu{
-
-    }
-
-</style>
 <div class="header flex">
-    <div class="logo hfix">
-        <img class="hfull" src="static/images/logo.png">
-    </div>
-    <div class="search_box flex hfix">
-        <div class="hfull" style="width:90%;">
-            <input class="hfull" style="width:100%;" type="text" ng-model="search_query" placeholder="Search..">    
-            </input>
+<!--    <div class="row">-->
+        <div class="logo hfix">
+            <img class="hfull" src="static/images/logo.png">
         </div>
-        <div class="hfull" style="width:10%;">
-            <button class="hfull" style="width:100%;" type="submit"><span><i class="material-icons">search</i></span>
-            </button>
+        <div class="search_box flex hfix container">
+            <div class="hfull" style="width:90%;">
+                <input class="hfull" style="width:100%;" type="text" ng-model="search_query" placeholder="Search..">
+            </div>
+            <div class="hfull " style="width:10%;">
+                <button class="hfull" style="min-width: 100px;" type="submit">
+            <img src="static/images/icons/ic_search_black_24px.svg">
+                </button>
+            </div>
         </div>
-    </div>
-    <div class="cart hfix"> 
-        <img class="hfull" src="static/images/ic_shopping_cart_white_24px.svg">
-    </div>
-    <div class = "menu" >
-        <img class = "hfix" src = "static/images/ic_more_vert_white_24px.svg" >
+        <div class="cart hfix ">
+            <img class="hfull" src="static/images/icons/ic_shopping_cart_white_24px.svg">
+        </div>
+        <div class="menu ">
+            <img class="hfix" src="static/images/icons/ic_more_vert_white_24px.svg">
+        </div>
+<!--    </div>-->
+</div>
+<!--
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-3" >
+            <img src="static/images/logo.png">
+        </div>
+        <div class="col-md-3">lsdkf</div>
+        <div class="col-md-3">lsdkf</div>
+        <div class="col-md-3">lsdkf</div>
     </div>
 </div>
+-->
