card view demo implemented in index.html

--- a/static/templates/layout/header.html
+++ b/static/templates/layout/header.html
@@ -30,6 +30,7 @@
         width: calc(100% - 100px);
         padding-left: 10px;
         padding-right: 10px;
+        background-image: "<i class="material-icons">search</i>";
     }
 </style>
 <div class="header flex">
