--- a/static/templates/home.html
+++ b/static/templates/home.html
@@ -4,14 +4,20 @@
 
 
 
-
-
-
-
-
-
-
-
+ <div class="card">
+        <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
+        <div class="card-block">
+            <h4 class="card-title text-center">Game Name</h4>
+            <div class="card-content">
+                <div class="text-left discount inline-block">
+                    discount upto x%
+                </div>
+                <div class="text-right price inline-block">
+                    <h4>₹0000</h4>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
