--- a/static/templates/layout/footer.html
+++ b/static/templates/layout/footer.html
@@ -11,31 +11,73 @@
 				</div>
 				<button class = "join-us-button hfix">Join Us</button>	
 			</div>
-			<!-- <div class = "footer">
-				<div class = "footer-left">
-				</div>
-				<div class = "footer-heading">
-					<span>cities</span>
-				</div>	
-				<div>
-					<a href = "abc.com">Delhi</a>
-				</div>
-				<div>
-					<a href = "abc.com">Noida</a>
-				</div>
-				<div>
-					<a href = "abc.com">Pune</a>
-				</div>
-				<div>
-					<a href = "abc.com">Bangalore</a>
-				</div>
-				<div>
-					<a href = "abc.com">Ghaziabad</a>
-				</div>
-				<div>
-					<a href = "abc.com">Gurgaon</a>
-				</div>
-			</div> -->
 		</div>	
 	</div>
+
+	<div class = "container-fluid" style="padding: 35px ; margin:0px ;background-color: #FFFFFF;">
+		<div class = "row" >
+			<div class="col-sm-3 footer-column-heading" style = "padding-left: 40px">
+		    	<p>Logo and copyright details</p>
+		    </div>
+		    <div class="col-sm-3 footer-column-heading" style = "padding-left: 30px">
+		    	<p>cities</p>
+		    	<div class = "container">
+		    		<div class = "row footer-column-contents">
+		    			<a href="abc.com">Delhi</a>
+		    		</div>
+		    		<div class = "row footer-column-contents">
+		    			<a href="abc.com">Pune</a>
+		    		</div>	
+		    		<div class = "row footer-column-contents">
+		    			<a href="abc.com">Bangalore</a>
+		    		</div>	
+		    		<div class = "row footer-column-contents">
+		    			<a href="abc.com">Mumbai</a>
+		    		</div>
+		    		<div class = "row footer-column-contents">
+		    			<a href="abc.com">Noida</a>
+		    		</div>		
+		    	</div>
+		    </div>
+		     <div class="col-sm-3 footer-column-heading" style = "padding-left: 30px">
+		    	<p>about us</p>
+		    	<div class = "container">
+		    		<div class = "row footer-column-contents">
+		    			<a href="abc.com">About</a>
+		    		</div>
+		    		<div class = "row footer-column-contents">
+		    			<a href="abc.com">Careers</a>
+		    		</div>	
+		    		<div class = "row footer-column-contents">
+		    			<a href="abc.com">Blog</a>
+		    		</div>	
+		    		<div class = "row footer-column-contents">
+		    			<a href="abc.com">Privacy Policy</a>
+		    		</div>
+		    		<div class = "row footer-column-contents">
+		    			<a href="abc.com">Terms of Usage</a>
+		    		</div>		
+		    	</div>
+		    </div>
+			<div class="col-sm-3 footer-column-heading" style = "padding-left: 30px">
+		    	<p>contact</p>
+		    	<div class = "container">
+		    		<div class = "row footer-column-contents">
+		    			<p >Feel free to get in touch via email:</p>
+		    		</div>
+		    		<div class = "row footer-column-contents">
+		    			<p style = "color: skyblue ; ">gameapp@gmail.com</p>	
+		    		</div>	
+		    		<div class = "row footer-column-contents">
+		    			<img src = "static/images/icons/facebook.png" >
+		    			<img src = "static/images/icons/instagram.png" style = "margin-left:5px";>
+		    			<img src = "static/images/icons/twitter.png" style = "margin-left:5px";>
+		    		</div>
+		    	</div>
+		    </div>
+
+		</div>	
+	</div>
+
+	
 </div>
