--- a/static/templates/home.html
+++ b/static/templates/home.html
@@ -9,7 +9,7 @@
     </div>
 
 
-<br><br><br><br>
+<br><br><br><br><br><br>
 
 
     <div class="card">
@@ -29,7 +29,7 @@
 
     <br><br><br><br><br>
 
-    <footer class = "navbar-fixed-bottom"></footer>
+    <footer></footer>
 
 
 
