--- a/static/templates/home.html
+++ b/static/templates/home.html
@@ -9,28 +9,67 @@
     </div>
 
 
-<br><br><br><br><br><br>
+    <br><br><br><br><br><br>
 
-
-    <div class="card">
-        <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
-        <div class="card-block">
-            <h4 class="card-title text-center">Game Name</h4>
-            <div class="card-content">
-                <div class="text-left discount inline-block">
-                    discount upto x%
-                </div>
-                <div class="text-right price inline-block">
-                    <h4>₹0000</h4>
+    <div class="home_carousal" uib-carousel active="active" interval="myInterval" style="margin:50px 0px; background-color:white">
+        <div uib-slide ng-repeat="slide in slides" index=$index>
+            <!--<img class="carousal_pics" ng-src="static/images/cardsample.jpg" style="margin:auto; width:30%">
+            <img class="carousal_pics" ng-src="static/images/cardsample.jpg" style="margin:auto;width:30%">
+            <img class="carousal_pics" ng-src="static/images/cardsample.jpg" style="margin:auto;width:30%">-->
+            <div class="card inline-block">
+                <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
+                <div class="card-block">
+                    <h4 class="card-title text-center">Game Name</h4>
+                    <div class="card-content">
+                        <div class="text-left discount inline-block">
+                            discount upto x%
+                        </div>
+                        <div class="text-right price inline-block">
+                            <h4>₹{{$index*1000}}</h4>
+                        </div>
+                    </div>
                 </div>
             </div>
+
+            <div class="card inline-block">
+                <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
+                <div class="card-block">
+                    <h4 class="card-title text-center">Game Name</h4>
+                    <div class="card-content">
+                        <div class="text-left discount inline-block">
+                            discount upto x%
+                        </div>
+                        <div class="text-right price inline-block">
+                            <h4>₹{{$index*1000}}</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card inline-block">
+                <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
+                <div class="card-block">
+                    <h4 class="card-title text-center">Game Name</h4>
+                    <div class="card-content">
+                        <div class="text-left discount inline-block">
+                            discount upto x%
+                        </div>
+                        <div class="text-right price inline-block">
+                            <h4>₹{{$index*1000}}</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+
         </div>
     </div>
+
 
     <br><br><br><br><br>
 
     <footer></footer>
-
-
 
 </div>
