--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,28 +1,27 @@
 .card {
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-            width: 300px;
-            margin: auto;
-            border-radius: 5%;
-        }
-        
-        .card img {
-            width: 100%;
-        }
-        
-        .card-block {
-            width: 100%;
-            padding: 10px;
-        }
-        
-        .discount,
-        .price {
-            width: 49%;
-        }
-        
-        .card-content {
-            width: 100%;
-        }
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    width: 300px;
+    margin: 5px;
+    border-radius: 5%;
+}
 
+.card img {
+    width: 100%;
+}
+
+.card-block {
+    width: 100%;
+    padding: 10px;
+}
+
+.discount,
+.price {
+    width: 49%;
+}
+
+.card-content {
+    width: 100%;
+}
 
 .carousal_pics {
     max-height: 300px;
@@ -32,6 +31,5 @@
 
 .home_carousal {
     width: 100%;
-/*    max-height: 600px;*/
-    
+    /*    max-height: 600px;*/
 }
