--- a/static/templates/home.html
+++ b/static/templates/home.html
@@ -11,12 +11,14 @@
 
     <br><br><br><br><br><br>
 
-    <div class="home_carousal" uib-carousel active="active" interval="myInterval" style="margin:50px 0px; background-color:white">
-        <div uib-slide ng-repeat="slide in slides" index=$index>
-            <!--<img class="carousal_pics" ng-src="static/images/cardsample.jpg" style="margin:auto; width:30%">
+    <!--<div class="home_carousal" uib-carousel active="active" interval="myInterval" style="margin:50px 0px; background-color:white">
+        <div uib-slide ng-repeat="slide in slides" index=$index>-->
+    <!--<img class="carousal_pics" ng-src="static/images/cardsample.jpg" style="margin:auto; width:30%">
             <img class="carousal_pics" ng-src="static/images/cardsample.jpg" style="margin:auto;width:30%">
             <img class="carousal_pics" ng-src="static/images/cardsample.jpg" style="margin:auto;width:30%">-->
-            <div class="card inline-block">
+    <div style="width:90%; overflow:hidden; position:relative;margin:auto;">
+        <div id="card-wrapper" style="display : inline-flex; position:relative; left : -{{calcLeft()}}px; transition : left 500ms ease-in-out;">
+            <div class="card">
                 <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
                 <div class="card-block">
                     <h4 class="card-title text-center">Game Name</h4>
@@ -25,13 +27,13 @@
                             discount upto x%
                         </div>
                         <div class="text-right price inline-block">
-                            <h4>₹{{$index*1000}}</h4>
+                            <h4>₹1000</h4>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="card inline-block">
+            <div class="card">
                 <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
                 <div class="card-block">
                     <h4 class="card-title text-center">Game Name</h4>
@@ -40,13 +42,13 @@
                             discount upto x%
                         </div>
                         <div class="text-right price inline-block">
-                            <h4>₹{{$index*1000}}</h4>
+                            <h4>₹2000</h4>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="card inline-block">
+            <div class="card">
                 <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
                 <div class="card-block">
                     <h4 class="card-title text-center">Game Name</h4>
@@ -55,17 +57,111 @@
                             discount upto x%
                         </div>
                         <div class="text-right price inline-block">
-                            <h4>₹{{$index*1000}}</h4>
+                            <h4>₹3000</h4>
                         </div>
                     </div>
                 </div>
             </div>
 
+            <div class="card">
+                <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
+                <div class="card-block">
+                    <h4 class="card-title text-center">Game Name</h4>
+                    <div class="card-content">
+                        <div class="text-left discount inline-block">
+                            discount upto x%
+                        </div>
+                        <div class="text-right price inline-block">
+                            <h4>₹4000</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+            <div class="card ">
+                <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
+                <div class="card-block">
+                    <h4 class="card-title text-center">Game Name</h4>
+                    <div class="card-content">
+                        <div class="text-left discount inline-block">
+                            discount upto x%
+                        </div>
+                        <div class="text-right price inline-block">
+                            <h4>₹5000</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+            <div class="card">
+                <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
+                <div class="card-block">
+                    <h4 class="card-title text-center">Game Name</h4>
+                    <div class="card-content">
+                        <div class="text-left discount inline-block">
+                            discount upto x%
+                        </div>
+                        <div class="text-right price inline-block">
+                            <h4>₹6000</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
+                <div class="card-block">
+                    <h4 class="card-title text-center">Game Name</h4>
+                    <div class="card-content">
+                        <div class="text-left discount inline-block">
+                            discount upto x%
+                        </div>
+                        <div class="text-right price inline-block">
+                            <h4>₹7000</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
+                <div class="card-block">
+                    <h4 class="card-title text-center">Game Name</h4>
+                    <div class="card-content">
+                        <div class="text-left discount inline-block">
+                            discount upto x%
+                        </div>
+                        <div class="text-right price inline-block">
+                            <h4>₹8000</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
+                <div class="card-block">
+                    <h4 class="card-title text-center">Game Name</h4>
+                    <div class="card-content">
+                        <div class="text-left discount inline-block">
+                            discount upto x%
+                        </div>
+                        <div class="text-right price inline-block">
+                            <h4>₹9000</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </div>
+        <button style="position:absolute; top:50%; height:30px; width:30px; left:1%;" ng-click="plusDivs(-1)">&#10094;</button>
+        <button style="position:absolute; top:50%; height:30px; width:30px; right:1%" ng-click="plusDivs(1)">&#10095;</button>
     </div>
+
+
+
+    <!--</div>
+    </div>-->
 
 
     <br><br><br><br><br>
