--- a/static/templates/home.html
+++ b/static/templates/home.html
@@ -21,10 +21,10 @@
             <div class="card">
                 <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
                 <div class="card-block">
-                    <h4 class="card-title text-center">Game Name</h4>
+                    <h4 class="card-title text-center gamename">Game Name</h4>
                     <div class="card-content">
                         <div class="text-left discount inline-block">
-                            discount upto x%
+                            12% off
                         </div>
                         <div class="text-right price inline-block">
                             <h4>₹1000</h4>
@@ -36,10 +36,10 @@
             <div class="card">
                 <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
                 <div class="card-block">
-                    <h4 class="card-title text-center">Game Name</h4>
+                    <h4 class="card-title text-center gamename">Game Name</h4>
                     <div class="card-content">
                         <div class="text-left discount inline-block">
-                            discount upto x%
+                            12% off
                         </div>
                         <div class="text-right price inline-block">
                             <h4>₹2000</h4>
@@ -51,10 +51,10 @@
             <div class="card">
                 <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
                 <div class="card-block">
-                    <h4 class="card-title text-center">Game Name</h4>
+                    <h4 class="card-title text-center gamename">Game Name</h4>
                     <div class="card-content">
                         <div class="text-left discount inline-block">
-                            discount upto x%
+                            12% off
                         </div>
                         <div class="text-right price inline-block">
                             <h4>₹3000</h4>
@@ -66,10 +66,10 @@
             <div class="card">
                 <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
                 <div class="card-block">
-                    <h4 class="card-title text-center">Game Name</h4>
+                    <h4 class="card-title text-center gamename">Game Name</h4>
                     <div class="card-content">
                         <div class="text-left discount inline-block">
-                            discount upto x%
+                            12% off
                         </div>
                         <div class="text-right price inline-block">
                             <h4>₹4000</h4>
@@ -81,10 +81,10 @@
             <div class="card ">
                 <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
                 <div class="card-block">
-                    <h4 class="card-title text-center">Game Name</h4>
+                    <h4 class="card-title text-center gamename">Game Name</h4>
                     <div class="card-content">
                         <div class="text-left discount inline-block">
-                            discount upto x%
+                            12% off
                         </div>
                         <div class="text-right price inline-block">
                             <h4>₹5000</h4>
@@ -96,10 +96,10 @@
             <div class="card">
                 <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
                 <div class="card-block">
-                    <h4 class="card-title text-center">Game Name</h4>
+                    <h4 class="card-title text-center gamename">Game Name</h4>
                     <div class="card-content">
                         <div class="text-left discount inline-block">
-                            discount upto x%
+                            12% off
                         </div>
                         <div class="text-right price inline-block">
                             <h4>₹6000</h4>
@@ -111,10 +111,10 @@
             <div class="card">
                 <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
                 <div class="card-block">
-                    <h4 class="card-title text-center">Game Name</h4>
+                    <h4 class="card-title text-center gamename">Game Name</h4>
                     <div class="card-content">
                         <div class="text-left discount inline-block">
-                            discount upto x%
+                            12% off
                         </div>
                         <div class="text-right price inline-block">
                             <h4>₹7000</h4>
@@ -126,10 +126,10 @@
             <div class="card">
                 <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
                 <div class="card-block">
-                    <h4 class="card-title text-center">Game Name</h4>
+                    <h4 class="card-title text-center gamename">Game Name</h4>
                     <div class="card-content">
                         <div class="text-left discount inline-block">
-                            discount upto x%
+                            12% off
                         </div>
                         <div class="text-right price inline-block">
                             <h4>₹8000</h4>
@@ -141,10 +141,10 @@
             <div class="card">
                 <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
                 <div class="card-block">
-                    <h4 class="card-title text-center">Game Name</h4>
+                    <h4 class="card-title text-center gamename">Game Name</h4>
                     <div class="card-content">
                         <div class="text-left discount inline-block">
-                            discount upto x%
+                            12% off
                         </div>
                         <div class="text-right price inline-block">
                             <h4>₹9000</h4>
