--- a/static/css/header.css
+++ b/static/css/header.css
@@ -7,11 +7,11 @@
 }
 
 .header {
-    background-color: #2874F0;
+    background-color: #ec1943;
     width: 100%;
     height: auto;
     padding: 20px;
-box-shadow: 0px 2px 10px #888888;
+    box-shadow: 0px 2px 10px #888888;
 }
 
 .hfix {
@@ -32,6 +32,6 @@ box-shadow: 0px 2px 10px #888888;
 }
 
 .container-fluid {
-    background-color: #2874F0;
+    background-color: #ec1943;
     max-height: 90px;
 }
