--- a/static/templates/layout/header.html
+++ b/static/templates/layout/header.html
@@ -2,7 +2,7 @@
     <div class="logo hfix">
         <img class="hfull" src="static/images/logo.png">
     </div>
-    <div class="search_box flex hfix container">
+    <div class="search_box flex hfix container">ader
         <div class="hfull" style="width:90%;">
             <input class="hfull" style="width:100%;" type="text" ng-model="search_query" placeholder="Search..">
         </div>
