removed horizontal scroll from footer

--- a/static/templates/layout/footer.html
+++ b/static/templates/layout/footer.html
@@ -17,10 +17,13 @@
 	<div class = "container-fluid" style="padding: 35px ; margin:0px ;background-color: #FFFFFF;">
 		<div class = "row" >
 			<div class="col-sm-3 footer-column-heading" style = "padding-left: 40px">
+<!--			<div class="col-sm-3 footer-column-heading" >-->
 		    	<p>Logo and copyright details</p>
 		    </div>
 		    <div class="col-sm-3 footer-column-heading" style = "padding-left: 30px">
+<!--		    <div class="col-sm-3 footer-column-heading">-->
 		    	<p>cities</p>
+<!--
 		    	<div class = "container">
 		    		<div class = "row footer-column-contents">
 		    			<a href="abc.com">Delhi</a>
@@ -38,37 +41,55 @@
 		    			<a href="abc.com">Noida</a>
 		    		</div>		
 		    	</div>
+-->
+                <div >
+		    		<div class = " footer-column-contents">
+		    			<a href="abc.com">Delhi</a>
+		    		</div>
+		    		<div class = " footer-column-contents">
+		    			<a href="abc.com">Pune</a>
+		    		</div>	
+		    		<div class = " footer-column-contents">
+		    			<a href="abc.com">Bangalore</a>
+		    		</div>	
+		    		<div class = " footer-column-contents">
+		    			<a href="abc.com">Mumbai</a>
+		    		</div>
+		    		<div class = " footer-column-contents">
+		    			<a href="abc.com">Noida</a>
+		    		</div>		
+		    	</div>
 		    </div>
 		     <div class="col-sm-3 footer-column-heading" style = "padding-left: 30px">
 		    	<p>about us</p>
-		    	<div class = "container">
-		    		<div class = "row footer-column-contents">
+		    	<div>
+		    		<div class = " footer-column-contents">
 		    			<a href="abc.com">About</a>
 		    		</div>
-		    		<div class = "row footer-column-contents">
+		    		<div class = " footer-column-contents">
 		    			<a href="abc.com">Careers</a>
 		    		</div>	
-		    		<div class = "row footer-column-contents">
+		    		<div class = " footer-column-contents">
 		    			<a href="abc.com">Blog</a>
 		    		</div>	
-		    		<div class = "row footer-column-contents">
+		    		<div class = " footer-column-contents">
 		    			<a href="abc.com">Privacy Policy</a>
 		    		</div>
-		    		<div class = "row footer-column-contents">
+		    		<div class = " footer-column-contents">
 		    			<a href="abc.com">Terms of Usage</a>
 		    		</div>		
 		    	</div>
 		    </div>
 			<div class="col-sm-3 footer-column-heading" style = "padding-left: 30px">
 		    	<p>contact</p>
-		    	<div class = "container">
+		    	<div>
 		    		<div class = "row footer-column-contents">
 		    			<p >Feel free to get in touch via email:</p>
 		    		</div>
-		    		<div class = "row footer-column-contents">
+		    		<div class = " footer-column-contents">
 		    			<p style = "color: skyblue ; ">gameapp@gmail.com</p>	
 		    		</div>	
-		    		<div class = "row footer-column-contents">
+		    		<div class = " footer-column-contents">
 		    			<img src = "static/images/icons/facebook.png" >
 		    			<img src = "static/images/icons/instagram.png" style = "margin-left:5px";>
 		    			<img src = "static/images/icons/twitter.png" style = "margin-left:5px";>
