card directive implemented

--- a/static/templates/home.html
+++ b/static/templates/home.html
@@ -8,7 +8,12 @@
     </div>
 
 
-    <br><br><br><br><br><br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
     <!--<div class="home_carousal" uib-carousel active="active" interval="myInterval" style="margin:50px 0px; background-color:white">
         <div uib-slide ng-repeat="slide in slides" index=$index>-->
@@ -17,6 +22,7 @@
             <img class="carousal_pics" ng-src="static/images/cardsample.jpg" style="margin:auto;width:30%">-->
     <div style="width:90%; overflow:hidden; position:relative;margin:auto;">
         <div id="card-wrapper" style="display : inline-flex; position:relative; left : -{{calcLeft()}}px; transition : left 500ms ease-in-out;">
+            <!--
             <div class="card">
                 <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
                 <div class="card-block">
@@ -31,126 +37,14 @@
                     </div>
                 </div>
             </div>
-
-            <div class="card">
-                <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
-                <div class="card-block">
-                    <h4 class="card-title text-center gamename">Game Name</h4>
-                    <div class="card-content">
-                        <div class="text-left discount inline-block">
-                            12% off
-                        </div>
-                        <div class="text-right price inline-block">
-                            <h4>₹2000</h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
-                <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
-                <div class="card-block">
-                    <h4 class="card-title text-center gamename">Game Name</h4>
-                    <div class="card-content">
-                        <div class="text-left discount inline-block">
-                            12% off
-                        </div>
-                        <div class="text-right price inline-block">
-                            <h4>₹3000</h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
-                <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
-                <div class="card-block">
-                    <h4 class="card-title text-center gamename">Game Name</h4>
-                    <div class="card-content">
-                        <div class="text-left discount inline-block">
-                            12% off
-                        </div>
-                        <div class="text-right price inline-block">
-                            <h4>₹4000</h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card ">
-                <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
-                <div class="card-block">
-                    <h4 class="card-title text-center gamename">Game Name</h4>
-                    <div class="card-content">
-                        <div class="text-left discount inline-block">
-                            12% off
-                        </div>
-                        <div class="text-right price inline-block">
-                            <h4>₹5000</h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
-                <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
-                <div class="card-block">
-                    <h4 class="card-title text-center gamename">Game Name</h4>
-                    <div class="card-content">
-                        <div class="text-left discount inline-block">
-                            12% off
-                        </div>
-                        <div class="text-right price inline-block">
-                            <h4>₹6000</h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
-                <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
-                <div class="card-block">
-                    <h4 class="card-title text-center gamename">Game Name</h4>
-                    <div class="card-content">
-                        <div class="text-left discount inline-block">
-                            12% off
-                        </div>
-                        <div class="text-right price inline-block">
-                            <h4>₹7000</h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
-                <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
-                <div class="card-block">
-                    <h4 class="card-title text-center gamename">Game Name</h4>
-                    <div class="card-content">
-                        <div class="text-left discount inline-block">
-                            12% off
-                        </div>
-                        <div class="text-right price inline-block">
-                            <h4>₹8000</h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
-                <img class="card-img-top" src="static/images/cardsample.jpg" alt="Card image cap">
-                <div class="card-block">
-                    <h4 class="card-title text-center gamename">Game Name</h4>
-                    <div class="card-content">
-                        <div class="text-left discount inline-block">
-                            12% off
-                        </div>
-                        <div class="text-right price inline-block">
-                            <h4>₹9000</h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
+-->
+            <card></card>
+            <card></card>
+            <card></card>
+            <card></card>
+            <card></card>
+            <card></card>
+            <card></card>
 
         </div>
         <button style="position:absolute; top:50%; height:30px; width:30px; left:1%;" ng-click="plusDivs(-1)">&#10094;</button>
@@ -163,7 +57,11 @@
     </div>-->
 
 
-    <br><br><br><br><br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
     <footer></footer>
 
