--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,9 +1,10 @@
+/*
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     width: 240px;
     margin: 24px;
-    /*border-radius: 5%;*/
 }
+*/
 
 .card img {
     width: 100%;
@@ -14,10 +15,12 @@
     transform: translateY(0.8px);
 }
 
+/*
 .gamename{
     font-weight: 300;
     font-size: 16px;
 }
+*/
 
 .discount{
     width: 49%;
@@ -25,20 +28,23 @@
     font-weight: 200;
 }
 
+/*
 .card-block {
     width: 100%;
     padding-left: 10px;
     padding-right: 10px;
-    /*padding: 10px;*/
 }
+*/
 
 .price {
     width: 49%;
 }
 
+/*
 .card-content {
     width: 100%;
 }
+*/
 
 .carousal_pics {
     max-height: 300px;
