--- a/static/templates/home.html
+++ b/static/templates/home.html
@@ -10,14 +10,60 @@
 
     <br>
     <br>
+
     <br>
-    <br>
-    <br>
+    <div class="jumbotron" style="padding-left:8%;">
+        <h2>New Releases</h2>
+    </div>
     <br>
 
     <div style="width:90%; overflow:hidden; position:relative;margin:auto;">
         <div id="card-wrapper" style="display : inline-flex; position:relative; left : -{{calcLeft()}}px; transition : left 500ms ease-in-out;">
-   
+
+            <card></card>
+            <card></card>
+            <card></card>
+            <card></card>
+            <card></card>
+            <card></card>
+            <card></card>
+
+        </div>
+        <button style="position:absolute; top:50%; height:30px; width:30px; left:1%;" ng-click="plusDivs(-1)">&#10094;</button>
+        <button style="position:absolute; top:50%; height:30px; width:30px; right:1%" ng-click="plusDivs(1)">&#10095;</button>
+    </div>
+    <hr style="width: 60%;">
+    <br>
+    <div class="jumbotron" style="padding-left:8%;">
+        <h2>Pre Owned</h2>
+    </div>
+    <br>
+
+    <div style="width:90%; overflow:hidden; position:relative;margin:auto;">
+        <div id="card-wrapper" style="display : inline-flex; position:relative; left : -{{calcLeft()}}px; transition : left 500ms ease-in-out;">
+
+            <card></card>
+            <card></card>
+            <card></card>
+            <card></card>
+            <card></card>
+            <card></card>
+            <card></card>
+
+        </div>
+        <button style="position:absolute; top:50%; height:30px; width:30px; left:1%;" ng-click="plusDivs(-1)">&#10094;</button>
+        <button style="position:absolute; top:50%; height:30px; width:30px; right:1%" ng-click="plusDivs(1)">&#10095;</button>
+    </div>
+    <hr style="width: 60%;">
+    <br>
+    <div class="jumbotron" style="padding-left:8%;">
+        <h2>Releasing Soon!</h2> <span>      pre-order now
+</span>
+    </div>
+    <br>
+    <div style="width:90%; overflow:hidden; position:relative;margin:auto;">
+        <div id="card-wrapper" style="display : inline-flex; position:relative; left : -{{calcLeft()}}px; transition : left 500ms ease-in-out;">
+
             <card></card>
             <card></card>
             <card></card>
