--- a/static/css/header.css
+++ b/static/css/header.css
@@ -26,12 +26,70 @@
 }*/
 
 .search_box {
-    width: calc(100% - 100px);
+    width: calc(100% - 50%);
     padding-left: 10px;
     padding-right: 10px;
+
 }
 
 .container-fluid {
     background-color: #ec1943;
     max-height: 90px;
 }
+
+.header-option{
+    color: #FFF;
+    font-weight: 300;
+    font-size: 14px;
+
+}
+.header-option:hover{
+    color: #ffbb88;
+}
+
+/*.dropdown {
+    float: left;
+    overflow: hidden;
+}
+
+.dropdown .dropbtn {
+    font-size: 16px;    
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: #ec1943;
+}
+
+.container a:hover, .dropdown:hover .dropbtn {
+    color: #ffbb88;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    float: none;
+    color: #545454;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #ffffff;
+    color: #ec1943;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+*/
+
