--- a/static/templates/layout/header.html
+++ b/static/templates/layout/header.html
@@ -1,21 +1,79 @@
-<div class="header flex">
-    <div class="logo hfix">
+<!-- <div class="header flex"> -->
+    <!-- <div class="logo hfix">
         <img class="hfull" src="static/images/logo.png">
-    </div>
-    <div class="search_box flex hfix container">
-        <div class="hfull" style="width:90%;">
-            <input class="hfull" style="width:100%;" type="text" ng-model="search_query" placeholder="Search..">
-        </div>
+    </div> -->
+    <!-- <div class="search_box flex hfix container">
+        <div class = "row">        
+            <div class="col-md-2"/>
+            <div class="hfull col-md-8">
+                <input class="hfull" style="width:100%;" type="text" ng-model="search_query" placeholder="Search..">
+            </div>
+            <div class = "col-md-2"/>
+
+        </div>    
         <div class="hfull " style="width:10%;">
             <button class="hfull" style="min-width: 100px;" type="submit">
             <img src="static/images/icons/ic_search_black_24px.svg">
                 </button>
         </div>
     </div>
-    <div class="cart hfix ">
+     <div class="cart hfix ">
         <img class="hfull" src="static/images/icons/ic_shopping_cart_white_24px.svg">
     </div>
     <div class="menu ">
         <img class="hfix" src="static/images/icons/ic_more_vert_white_24px.svg">
-    </div>
+    </div> -->
+
+<div class = "container-fluid" style="padding: 5px; margin:0px ;background-color: #ec1943; box-shadow: 0 20px 20px rgba(0,0,0,.2);">
+        <div class = "row">
+            <div class="col-sm-2" style = "">
+            </div>
+            <div class="col-sm-2" style = "">
+                <p class="header-option">Rent</p>
+            </div>
+            <div class="col-sm-2" style = "">
+                <p class="header-option">Buy</p>
+            </div>
+            <div class="col-sm-2" style = "">
+                <p class="header-option">Consoles</p>
+            </div>
+            <div class="col-sm-2" style = "">
+                <p class="header-option">Sign Up</p>
+            </div>
+            <div class="col-sm-2" style = "">
+                <p class="header-option" style="font-size: 16px;">Cart</p>
+            </div>
+            <div class="col-sm-2" style = "">
+            </div>
+        </div>
+        <div class = "row">        
+              <div class = "col-sm-3">
+                </div>
+                <div class="col-sm-6">
+                <form class="navbar-form" role="search">
+                <div class="input-group" style="width:100%; border: none;">
+                    <input type="text" class="form-control" placeholder="Search for an adventure..!" name="srch-term" id="srch-term" 
+                    style="font-weight: 200; font-size: 14px;">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                    </div>
+                </div>
+                </form>
+                </div>
+                <div class = "col-sm-3">
+                </div>
+        </div>
+
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
