last min changes

--- a/static/templates/home.html
+++ b/static/templates/home.html
@@ -3,7 +3,7 @@
 
     <div class="home_carousal" uib-carousel active="active" interval="myInterval">
         <div uib-slide ng-repeat="slide in slides" index=$index>
-            <img class="carousal_pics" ng-src="{{slide.image}}" style="margin:auto;">
+            <img class="carousal_pics" ng-src="{{slide.image}}" style="margin:auto;   max-height: 400px; width: 100%;">
         </div>
     </div>
 
