--- a/static/css/card.css
+++ b/static/css/card.css
@@ -28,3 +28,9 @@
     font-weight: 300;
     font-size: 16px;
 }
+
+.card-img-top {
+    max-width: 240px;
+/*    max-height: 100px;*/
+/*    margin: 24px;*/
+}
