--- a/static/templates/home.html
+++ b/static/templates/home.html
@@ -12,9 +12,8 @@
     <br>
 
     <br>
-    <div class="jumbotron" style="padding-left:8%;">
-        <h2>New Releases</h2>
-    </div>
+    <h2 style="padding-left: 6%; font-weight: 300;">New Releases</h2>
+    <hr class="core-section-underline" style="width:8% ;margin-left:6% ; border: 1px solid #ffbb88">
     <br>
 
     <div style="width:90%; overflow:hidden; position:relative;margin:auto;">
@@ -34,9 +33,8 @@
     </div>
     <hr style="width: 60%;">
     <br>
-    <div class="jumbotron" style="padding-left:8%;">
-        <h2>Pre Owned</h2>
-    </div>
+    <h2 style="padding-left: 6%; font-weight: 300;">Pre Owned</h2>
+    <hr class="core-section-underline" style="width:8% ;margin-left:6% ; border: 1px solid #ffbb88">
     <br>
 
     <div style="width:90%; overflow:hidden; position:relative;margin:auto;">
@@ -56,10 +54,8 @@
     </div>
     <hr style="width: 60%;">
     <br>
-    <div class="jumbotron" style="padding-left:8%;">
-        <h2>Releasing Soon!</h2> <span>      pre-order now
-</span>
-    </div>
+    <h2 style="padding-left: 6%; font-weight: 300;">Upcoming</h2>
+    <hr class="core-section-underline" style="width:8% ;margin-left:6% ; border: 1px solid #ffbb88">
     <br>
     <div style="width:90%; overflow:hidden; position:relative;margin:auto;">
         <div id="card-wrapper" style="display : inline-flex; position:relative; left : -{{calcLeft()}}px; transition : left 500ms ease-in-out;">
