--- a/static/templates/home.html
+++ b/static/templates/home.html
@@ -17,7 +17,7 @@
     <br>
 
     <div style="width:90%; overflow:hidden; position:relative;margin:auto;">
-        <div id="card-wrapper" style="display : inline-flex; position:relative; left : -{{calcLeft()}}px; transition : left 500ms ease-in-out;">
+        <div id="card-wrapper" style="display : inline-flex; position:relative; left : -{{calcLeft1()}}px; transition : left 500ms ease-in-out;">
 
             <card></card>
             <card></card>
@@ -28,8 +28,8 @@
             <card></card>
 
         </div>
-        <button style="position:absolute; top:50%; height:30px; width:30px; left:1%;" ng-click="plusDivs(-1)">&#10094;</button>
-        <button style="position:absolute; top:50%; height:30px; width:30px; right:1%" ng-click="plusDivs(1)">&#10095;</button>
+        <button style="position:absolute; top:50%; height:30px; width:30px; left:1%;" ng-click="plusDivs1(-1)">&#10094;</button>
+        <button style="position:absolute; top:50%; height:30px; width:30px; right:1%" ng-click="plusDivs1(1)">&#10095;</button>
     </div>
     <hr style="width: 60%;">
     <br>
@@ -38,7 +38,7 @@
     <br>
 
     <div style="width:90%; overflow:hidden; position:relative;margin:auto;">
-        <div id="card-wrapper" style="display : inline-flex; position:relative; left : -{{calcLeft()}}px; transition : left 500ms ease-in-out;">
+        <div id="card-wrapper" style="display : inline-flex; position:relative; left : -{{calcLeft2()}}px; transition : left 500ms ease-in-out;">
 
             <card></card>
             <card></card>
@@ -49,8 +49,8 @@
             <card></card>
 
         </div>
-        <button style="position:absolute; top:50%; height:30px; width:30px; left:1%;" ng-click="plusDivs(-1)">&#10094;</button>
-        <button style="position:absolute; top:50%; height:30px; width:30px; right:1%" ng-click="plusDivs(1)">&#10095;</button>
+        <button style="position:absolute; top:50%; height:30px; width:30px; left:1%;" ng-click="plusDivs2(-1)">&#10094;</button>
+        <button style="position:absolute; top:50%; height:30px; width:30px; right:1%" ng-click="plusDivs2(1)">&#10095;</button>
     </div>
     <hr style="width: 60%;">
     <br>
@@ -58,7 +58,7 @@
     <hr class="core-section-underline" style="width:8% ;margin-left:6% ; border: 1px solid #ffbb88">
     <br>
     <div style="width:90%; overflow:hidden; position:relative;margin:auto;">
-        <div id="card-wrapper" style="display : inline-flex; position:relative; left : -{{calcLeft()}}px; transition : left 500ms ease-in-out;">
+        <div id="card-wrapper" style="display : inline-flex; position:relative; left : -{{calcLeft3()}}px; transition : left 500ms ease-in-out;">
 
             <card></card>
             <card></card>
@@ -69,8 +69,8 @@
             <card></card>
 
         </div>
-        <button style="position:absolute; top:50%; height:30px; width:30px; left:1%;" ng-click="plusDivs(-1)">&#10094;</button>
-        <button style="position:absolute; top:50%; height:30px; width:30px; right:1%" ng-click="plusDivs(1)">&#10095;</button>
+        <button style="position:absolute; top:50%; height:30px; width:30px; left:1%;" ng-click="plusDivs3(-1)">&#10094;</button>
+        <button style="position:absolute; top:50%; height:30px; width:30px; right:1%" ng-click="plusDivs3(1)">&#10095;</button>
     </div>
 
 
