some subscription page changes

--- a/static/templates/layout/footer.html
+++ b/static/templates/layout/footer.html
@@ -16,10 +16,10 @@
 
 	<div class = "container-fluid" style="padding: 35px ; margin:0px ;background-color: #FFFFFF;">
 		<div class = "row" >
-			<div class="col-sm-3 footer-column-heading" style = "padding-left: 40px">
+			<div class="col-sm-3 footer-column-heading">
 		    	<p>Logo and copyright details</p>
 		    </div>
-		    <div class="col-sm-3 footer-column-heading" style = "padding-left: 30px">
+		    <div class="col-sm-3 footer-column-heading">
 		    	<p>cities</p>
                 <div >
 		    		<div class = " footer-column-contents">
@@ -39,7 +39,7 @@
 		    		</div>		
 		    	</div>
 		    </div>
-		     <div class="col-sm-3 footer-column-heading" style = "padding-left: 30px">
+		     <div class="col-sm-3 footer-column-heading" >
 		    	<p>about us</p>
 		    	<div>
 		    		<div class = " footer-column-contents">
@@ -60,7 +60,7 @@
 		    	</div>
 		    </div>
 
-			<div class="col-sm-3 footer-column-heading" style = "padding-left: 30px">
+			<div class="col-sm-3 footer-column-heading">
 		    	<p>contact</p>
 		    	<div>
 		    		<div class = "row footer-column-contents">
