--- a/static/templates/layout/header.html
+++ b/static/templates/layout/header.html
@@ -32,10 +32,10 @@
                 <p class="header-option">Rent</p>
             </div>
             <div class="col-sm-2" style = "">
-                <p class="header-option">Buy</p>
+                <p class="header-option">Subscription</p>
             </div>
             <div class="col-sm-2" style = "">
-                <p class="header-option">Consoles</p>
+                <p class="header-option">How it Works</p>
             </div>
             <div class="col-sm-2" style = "">
                 <p class="header-option">Sign Up</p>
